--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,24 +1,3 @@
-.App {
-  text-align: center;
-}
-.todo-app {
-  background-color: #efefef;
-  padding: 1.2em;
-  .new-todo{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    input{
-      width: 80% !important;
-    }
+.noFlexGrow {
+    flex-grow: 0 !important;
   }
-}
-
-//.list-group-item{
-//  &.active:hover{
-//
-//  }
-//  &active:hover{
-//    background-color: #d3d3d3;
-//  }
-//}
